--- a/client/src/styles/layout.css
+++ b/client/src/styles/layout.css
@@ -40,11 +40,18 @@
 }
 .exmbtn{
     padding: 7px;
-    width: 10%;
-    height: 5%;
     margin-top: 2em;
     font-weight: 600;
+    background-color: var(--primary);
+    color: white;
+    border: 2px solid var(--primary);
+    border-radius: 2px;
+}
+.canbtn{
     background-color: white;
+    padding: 7px;
+    margin-top: 2em;
+    font-weight: 600;
     color: var(--primary);
     border: 2px solid var(--primary);
     border-radius: 2px;
