--- a/client/src/styles/alignments.css
+++ b/client/src/styles/alignments.css
@@ -30,10 +30,10 @@
   width: 400px;
 }
 .flex {
-  display: flex;
+  display: flex !important;
 }
 .flex-col {
-  flex-direction: column;
+  flex-direction: column !important;
 }
 .justify-center {
   justify-content: center;
