--- a/client/src/styles/layout.css
+++ b/client/src/styles/layout.css
@@ -56,3 +56,27 @@
     border: 2px solid var(--primary);
     border-radius: 2px;
 }
+.exmcard{
+    box-shadow:0 0 1px gray;
+    background-color: white;
+    padding: 10px;
+    border-radius: 5px;
+    margin: 10px;
+    width: 100%;
+    height: 100%;
+}
+
+.exmcard h1{
+ margin-bottom: .3em;   
+}
+.option{
+    box-shadow: rgba(0, 0, 0, 0.638) 0px 0px 2px;
+    border-radius: 2px;
+    padding-left: 10px;
+}
+.selected-option{
+    box-shadow: rgba(0, 0, 0, 0.638) 0px 0px 2px;
+    border-radius: 2px;
+    padding-left: 10px;
+    border: 2px solid var(--primary);
+}
